2012-04-23
Moved if statement checks around to catch errors.

2012-04-20 1.33.6
Fixed mess up commits between computers.

2012-04-17 1.33.5
Found yet more odd new file from waters causing problems. Added another if statement in both CDF & XML blocks
+ Attempt to fix float64 error on windows build and improve return of findPeaks.massifquant
+ Patches from Chris Pudney and Chris Conley: optional argument ROI.list for findPeaks.centWave and additional small changes in  centWave to enable processing of ROI lists generated by "massifquant"
+ massifquant integrated with Centwave intensity estimation

2012-04-15 1.33.4
Added better coding for automatic detection of lockMass on netCDF files and catch of newer altered files. 
Coding to come after more testing
Also changed group.nearest code to improve speed. Changed for loop -> apply ~2x - 3x faster :-)

2012-04-13 1.33.3
Improve writemzdata() to also store MSn data if that's contained in the xcmsRaw.

2012-04-04 1.33.2
Patches from Chris Pudney and Chris Conley: optional argument ROI.list for findPeaks.centWave and additional small changes in centWave to enable processing of ROI lists generated by "massifquant"  
Fixed bug in centWave where it would try to use scale=0 under certain circumstances

2012-04-04 1.33.1
Fix problem for group() if only one peak in xcmsSet

2012-03-07 1.31.13
Use the old RAMP and netCDF interfaces now part of mzR,
which is a major speed improvement

2012-03-07 1.31.12
Add RUnit to the Suggested packages, needed during R CMD check 

2012-03-06 1.31.11
Fix Rgraphviz::plot() call

2012-03-04 1.31.10
Revert last change because BiocGenerics also reverted 

2012-02-27 1.31.9
Adapt xcmsFragments plotTree to new Rgraphviz plot() S4 approach

2012-02-27 1.31.8
Fixed MassIfQuant on windows

2012-02-15 1.31.7
fixed missing close(mz) in xcmsRaw.R

2012-01-11 1.31.6
Added scanrange parameter to xcmsRaw

2011-11-07 1.31.2
Moved to mzR for all I/O. Caveat: since the underlying I/O functions 