@@ -1,6 +1,6 @@
 Package: xcms
-Version: 1.33.7
-Date: 2012-04-23
+Version: 1.33.8
+Date: 2012-04-24
 Title: LC/MS and GC/MS Data Analysis
 Author: Colin A. Smith <csmith@scripps.edu>, 
         Ralf Tautenhahn <rtautenh@scripps.edu>,
